--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
     - name: Checking out
       uses: actions/checkout@v3
     - name: Building
-      uses: roboware-org/roboware-ci@v3
+      uses: hakoroboken/roboware-ci@v2.1.4
